Fix Alignment on course Price Page

--- a/src/Component/FilmProductionCourseContent/FilmProductionCourseContent.module.css
+++ b/src/Component/FilmProductionCourseContent/FilmProductionCourseContent.module.css
@@ -5,7 +5,7 @@
   max-width: 1397px;
   justify-content: baseline;
   align-items: baseline;
-  padding: 30px;
+  padding: 10px;
 }
 
 /* Collapsible for LTR */
