--- a/src/Component/FilmProductionInstructor/FilmProductionInstructor.module.css
+++ b/src/Component/FilmProductionInstructor/FilmProductionInstructor.module.css
@@ -6,7 +6,7 @@
   padding-top: 20px;
   justify-content: baseline;
   align-items: baseline;
-  padding: 30px;
+  padding: 10px;
 }
 
 .header {
